nginxweb/eksapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: learnweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web 
    spec:
      containers:
      - name: web
        image: nginx:latest
        ports:
        - containerPort: 80
          protocol: TCP
